# TextSAM

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
configs/: model.yaml  stage1_phrasecut.yaml  stage2_ade_lvis.yaml
data/: __init__.py  ade20k.py  download.py  merged.py  phrasecut.py  transforms.py
docs/: architecture.md  citations.bib  datasets.md  inference.md  training.md
eval/stage1/: metrics.json
eval/stage2/: metrics.json
inference/: predict.py  visualize.py
models/: decoder.py  fusion.py
scripts/: download_data.sh  eval_stage1.sh  eval_stage2.sh  infer.sh  prepare_data.sh  train_stage1.sh  train_stage2.sh  visualize_data.sh
textsam/data/: download.py  lvis.py  phrasecut.py  prepare.py  visualize.py
textsam/inference/: __init__.py  evaluate.py  evaluate_stage2.py  predict.py
textsam/models/: __init__.py  decoder.py  encoders.py  fusion.py  textsam.py
textsam/train/: stage1.py  stage2.py  trainer.py
textsam/utils/: ckpt.py  logging.py
train/: __init__.py  losses.py  stage1.py  trainer.py
utils/: __init__.py  metrics.py
